src/objects/Customersurvey__c.object
<CustomObject>
    <description>Enquete</description>
    <fields>
        <fullName>Areat__c</fullName>
        <label>6-1)立地条件</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>満足</fullName>
                    <default>true</default>
                    <label>満足</label>
                </value>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>不満</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buildingt__c</fullName>
        <label>6-3)館内設備</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>満足</fullName>
                    <default>true</default>
                    <label>満足</label>
                </value>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>不満</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>1-1)チャネル</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>パンフレットを見て</fullName>
                </value>
                <value>
                    <fullName>旅行会社を経由して</fullName>
                </value>
                <value>
                    <fullName>新聞・雑誌を見て</fullName>
                </value>
                <value>
                    <fullName>インターネットを見て</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charget__c</fullName>
        <label>6-2)宿泊料金</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>満足</fullName>
                    <default>true</default>
                    <label>満足</label>
                </value>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>不満</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checkinday__c</fullName>
        <formula>Reserved__r.EntryTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ご宿泊日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cleanr__c</fullName>
        <label>4-3)清掃</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>満足</fullName>
                    <default>true</default>
                    <label>満足</label>
                </value>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>不満</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Countt__c</fullName>
        <label>回数</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>初めて</fullName>
                </value>
                <value>
                    <fullName>２回目</fullName>
                </value>
                <value>
                    <fullName>３回以上</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DM送付可のときのみ、チェックを入れてください。</inlineHelpText>
        <label>DM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>履歴</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>初めて</fullName>
                    <default>true</default>
                    <label>初めて</label>
                </value>
                <value>
                    <fullName>２回以上</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>前回のご利用</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>その他</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Frontt__c</fullName>
        <label>3-2)フロントの対応</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>満足</fullName>
                    <default>true</default>
                    <label>満足</label>
                </value>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>不満</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keyword4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Keyword4</label>
        <referenceTo>Jinyakeyword__c</referenceTo>
        <relationshipLabel>アンケート (Keyword4)</relationshipLabel>
        <relationshipName>anW085</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Keyword5__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Keyword5</label>
        <referenceTo>Jinyakeyword__c</referenceTo>
        <relationshipLabel>アンケート (Keyword5)</relationshipLabel>
        <relationshipName>anW08F</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Keyword6__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Keyword6</label>
        <referenceTo>Jinyakeyword__c</referenceTo>
        <relationshipLabel>アンケート (Keyword6)</relationshipLabel>
        <relationshipName>anW08P</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Keyword8_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Keyword8-1</label>
        <referenceTo>Jinyakeyword__c</referenceTo>
        <relationshipLabel>アンケート (Keyword8-1)</relationshipLabel>
        <relationshipName>anW08Z</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Keyword8_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Keyword8-2</label>
        <referenceTo>Jinyakeyword__c</referenceTo>
        <relationshipLabel>アンケート (Keyword8-2)</relationshipLabel>
        <relationshipName>anW08o</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Keyword8_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Keyword8-3</label>
        <referenceTo>Jinyakeyword__c</referenceTo>
        <relationshipLabel>アンケート (Keyword8-3)</relationshipLabel>
        <relationshipName>anW08y</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mealt__c</fullName>
        <label>5-2)お料理の味</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>満足</fullName>
                    <default>true</default>
                    <label>満足</label>
                </value>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>不満</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MeiOther__c</fullName>
        <label>1)のその他</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meibaitai__c</fullName>
        <label>媒体名</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>るるぶフリーロマンスカー</fullName>
                </value>
                <value>
                    <fullName>旅色（ネットマガジン）</fullName>
                </value>
                <value>
                    <fullName>旅サライ</fullName>
                </value>
                <value>
                    <fullName>「幸せを呼ぶパワースポットはここだ！」</fullName>
                </value>
                <value>
                    <fullName>トラベルポーター「和の宿」</fullName>
                </value>
                <value>
                    <fullName>陣屋オリジナルパンフレット</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meisite__c</fullName>
        <inlineHelpText>公開サイト一覧</inlineHelpText>
        <label>サイト名</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>自社サイト</fullName>
                </value>
                <value>
                    <fullName>AGT[JTB]</fullName>
                </value>
                <value>
                    <fullName>AGT[らくだ倶楽部]</fullName>
                </value>
                <value>
                    <fullName>AGT[やど日本]</fullName>
                </value>
                <value>
                    <fullName>AGT[ぐるなび]</fullName>
                </value>
                <value>
                    <fullName>AGT[楽天]</fullName>
                </value>
                <value>
                    <fullName>AGT[トクー]</fullName>
                </value>
                <value>
                    <fullName>AGT[じゃらん]</fullName>
                </value>
                <value>
                    <fullName>AGT[相鉄観光]</fullName>
                </value>
                <value>
                    <fullName>AGT[小田急トラベル]</fullName>
                </value>
                <value>
                    <fullName>AGT[KNT]</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Memorial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Memorialword1</label>
        <referenceTo>Jinyakeyword__c</referenceTo>
        <relationshipLabel>アンケート (Memorialword[1])</relationshipLabel>
        <relationshipName>ankW08p</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Memorialword2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Memorialword2</label>
        <referenceTo>Jinyakeyword__c</referenceTo>
        <relationshipLabel>アンケート (Memorialword2)</relationshipLabel>
        <relationshipName>ankW08q</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Memorialword3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Memorialword3</label>
        <referenceTo>Jinyakeyword__c</referenceTo>
        <relationshipLabel>アンケート (Memorialword3)</relationshipLabel>
        <relationshipName>ankW0A6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phonet__c</fullName>
        <label>3-1)電話の対応</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>満足</fullName>
                    <default>true</default>
                    <label>満足</label>
                </value>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>不満</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricet__c</fullName>
        <label>5-3)料金</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>満足</fullName>
                    <default>true</default>
                    <label>満足</label>
                </value>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>不満</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>2-1)目的</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>仕事</fullName>
                </value>
                <value>
                    <fullName>友人同士で観光</fullName>
                </value>
                <value>
                    <fullName>家族旅行</fullName>
                </value>
                <value>
                    <fullName>お祝い</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reserved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ご予約</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>アンケート</relationshipLabel>
        <relationshipName>questionnaire8Ftx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roomname__c</fullName>
        <formula>Field21__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>お部屋</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roomt__c</fullName>
        <label>4-1)客室の設備・環境</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>満足</fullName>
                    <default>true</default>
                    <label>満足</label>
                </value>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>不満</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roomy__c</fullName>
        <label>4-2)客室の寝具・浴衣</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>満足</fullName>
                    <default>true</default>
                    <label>満足</label>
                </value>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>不満</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Servicet__c</fullName>
        <label>5-1)サービス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>満足</fullName>
                    <default>true</default>
                    <label>満足</label>
                </value>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>不満</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Totalt__c</fullName>
        <label>3-3)全体的な対応</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>満足</fullName>
                    <default>true</default>
                    <label>満足</label>
                </value>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>不満</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voiceword1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voiceword1</label>
        <referenceTo>Jinyakeyword__c</referenceTo>
        <relationshipLabel>アンケート (Voiceword1)</relationshipLabel>
        <relationshipName>anW098</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Voiceword2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voiceword2</label>
        <referenceTo>Jinyakeyword__c</referenceTo>
        <relationshipLabel>アンケート (Voiceword2)</relationshipLabel>
        <relationshipName>anW09I</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Voiceword3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voiceword3</label>
        <referenceTo>Jinyakeyword__c</referenceTo>
        <relationshipLabel>アンケート (Voiceword3)</relationshipLabel>
        <relationshipName>anW09c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <label>口コミ[1]</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <label>口コミ[2]</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X3_1__c</fullName>
        <label>3-1)補足</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X3_2__c</fullName>
        <label>3-2)補足</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X3_3__c</fullName>
        <label>3-3)補足</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X3__c</fullName>
        <label>口コミ[3]</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>anquete__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>お客様</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>アンケート</relationshipLabel>
        <relationshipName>anquetejvyu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>comment3__c</fullName>
        <label>3)コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>comment5__c</fullName>
        <label>5)コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>comment6__c</fullName>
        <label>6)コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>typeofpaper__c</fullName>
        <label>タイプ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>宿泊の方</fullName>
                    <default>true</default>
                    <label>宿泊の方</label>
                </value>
                <value>
                    <fullName>口コミ</fullName>
                </value>
                <value>
                    <fullName>お客様の声</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>アンケート</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>INQ#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>